--- a/benchmark/ghanoz-json-benchmark-normal.html
+++ b/benchmark/ghanoz-json-benchmark-normal.html
@@ -58,7 +58,7 @@ M(5759,3680);
 L(5659,3680);
 ctx.stroke();
 ctx.closePath();
-T(540,3730,10.0,"Right"," 10");
+T(540,3730,10.0,"Right"," 0");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
@@ -78,7 +78,7 @@ M(5759,3462);
 L(5659,3462);
 ctx.stroke();
 ctx.closePath();
-T(540,3512,10.0,"Right"," 20");
+T(540,3512,10.0,"Right"," 50");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
@@ -98,7 +98,7 @@ M(5759,3244);
 L(5659,3244);
 ctx.stroke();
 ctx.closePath();
-T(540,3294,10.0,"Right"," 30");
+T(540,3294,10.0,"Right"," 100");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
@@ -118,7 +118,7 @@ M(5759,3026);
 L(5659,3026);
 ctx.stroke();
 ctx.closePath();
-T(540,3076,10.0,"Right"," 40");
+T(540,3076,10.0,"Right"," 150");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
@@ -138,7 +138,7 @@ M(5759,2808);
 L(5659,2808);
 ctx.stroke();
 ctx.closePath();
-T(540,2858,10.0,"Right"," 50");
+T(540,2858,10.0,"Right"," 200");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
@@ -158,7 +158,7 @@ M(5759,2591);
 L(5659,2591);
 ctx.stroke();
 ctx.closePath();
-T(540,2641,10.0,"Right"," 60");
+T(540,2641,10.0,"Right"," 250");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
@@ -178,7 +178,7 @@ M(5759,2373);
 L(5659,2373);
 ctx.stroke();
 ctx.closePath();
-T(540,2423,10.0,"Right"," 70");
+T(540,2423,10.0,"Right"," 300");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
@@ -198,7 +198,7 @@ M(5759,2155);
 L(5659,2155);
 ctx.stroke();
 ctx.closePath();
-T(540,2205,10.0,"Right"," 80");
+T(540,2205,10.0,"Right"," 350");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
@@ -218,7 +218,7 @@ M(5759,1937);
 L(5659,1937);
 ctx.stroke();
 ctx.closePath();
-T(540,1987,10.0,"Right"," 90");
+T(540,1987,10.0,"Right"," 400");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
@@ -240,7 +240,7 @@ M(5759,1719);
 L(5659,1719);
 ctx.stroke();
 ctx.closePath();
-T(540,1769,10.0,"Right"," 100");
+T(540,1769,10.0,"Right"," 450");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
@@ -260,7 +260,7 @@ M(5759,1501);
 L(5659,1501);
 ctx.stroke();
 ctx.closePath();
-T(540,1551,10.0,"Right"," 110");
+T(540,1551,10.0,"Right"," 500");
 ctx.beginPath();
 M(620,3680);
 L(620,3580);
@@ -359,7 +359,7 @@ ctx.closePath();
 ctx.stroke();
 TR(90,2641,270,10.0,"Center","response time (ms)");
 T(3189,3980,10.0,"Center","request");
-T(3189,1401,10.0,"Center","ghanoz-json xml/json benchmark testing");
+T(3189,1401,10.0,"Center","ghanoz-json xml/json benchmark testing for Normal Resource scenario");
 if (typeof(gnuplot.hide_gp_plot_1) == "undefined"|| !gnuplot.hide_gp_plot_1) {
 ctx.strokeStyle = "rgb(255,000,000)";
 ctx.strokeStyle = "rgb(000,000,000)";
@@ -369,105 +369,105 @@ ctx.beginPath();
 M(5179,1663);
 L(5599,1663);
 M(620,3549);
-L(672,3310);
-L(724,3288);
-L(776,3266);
-L(828,3244);
-L(880,3222);
-L(932,3210);
-L(983,3201);
-L(1035,3189);
-L(1087,3179);
-L(1139,3177);
-L(1191,3157);
-L(1243,3150);
-L(1295,3135);
-L(1347,3135);
-L(1399,3115);
-L(1451,3113);
-L(1503,3113);
-L(1554,3112);
-L(1606,3092);
-L(1658,3092);
-L(1710,3073);
-L(1762,3070);
-L(1814,3070);
-L(1866,3059);
-L(1918,3048);
-L(1970,3048);
-L(2022,3048);
-L(2074,3046);
-L(2125,3026);
-L(2177,3026);
-L(2229,3026);
-L(2281,3011);
-L(2333,3005);
-L(2385,3005);
-L(2437,3003);
-L(2489,2983);
-L(2541,2983);
-L(2593,2983);
-L(2645,2983);
-L(2696,2961);
-L(2748,2961);
-L(2800,2961);
-L(2852,2961);
-L(2904,2943);
-L(2956,2939);
-L(3008,2939);
-L(3060,2939);
-L(3112,2920);
-L(3164,2917);
-L(3216,2917);
-L(3267,2916);
-L(3319,2896);
-L(3371,2896);
-L(3423,2896);
-L(3475,2893);
-L(3527,2874);
-L(3579,2874);
-L(3631,2874);
-L(3683,2870);
-L(3735,2852);
-L(3786,2852);
-L(3838,2852);
-L(3890,2830);
-L(3942,2830);
-L(3994,2830);
-L(4046,2817);
-L(4098,2808);
-L(4150,2808);
-L(4202,2808);
-L(4254,2787);
-L(4306,2787);
-L(4357,2786);
-L(4409,2765);
-L(4461,2765);
-L(4513,2763);
-L(4565,2743);
-L(4617,2743);
-L(4669,2737);
-L(4721,2721);
-L(4773,2721);
-L(4825,2699);
-L(4877,2699);
-L(4928,2681);
-L(4980,2678);
-L(5032,2657);
-L(5084,2656);
-L(5136,2634);
-L(5188,2633);
-L(5240,2612);
-L(5292,2591);
-L(5344,2579);
-L(5396,2561);
-L(5448,2536);
-L(5499,2504);
-L(5551,2481);
-L(5603,2438);
-L(5655,2374);
-L(5707,2260);
-L(5759,1675);
+L(672,3527);
+L(724,3512);
+L(776,3496);
+L(828,3484);
+L(880,3477);
+L(932,3471);
+L(983,3462);
+L(1035,3453);
+L(1087,3445);
+L(1139,3436);
+L(1191,3432);
+L(1243,3427);
+L(1295,3421);
+L(1347,3416);
+L(1399,3411);
+L(1451,3406);
+L(1503,3401);
+L(1554,3396);
+L(1606,3389);
+L(1658,3384);
+L(1710,3380);
+L(1762,3375);
+L(1814,3371);
+L(1866,3367);
+L(1918,3363);
+L(1970,3360);
+L(2022,3356);
+L(2074,3353);
+L(2125,3348);
+L(2177,3344);
+L(2229,3340);
+L(2281,3336);
+L(2333,3332);
+L(2385,3329);
+L(2437,3326);
+L(2489,3323);
+L(2541,3318);
+L(2593,3315);
+L(2645,3312);
+L(2696,3309);
+L(2748,3305);
+L(2800,3301);
+L(2852,3297);
+L(2904,3292);
+L(2956,3289);
+L(3008,3287);
+L(3060,3283);
+L(3112,3279);
+L(3164,3276);
+L(3216,3274);
+L(3267,3270);
+L(3319,3266);
+L(3371,3262);
+L(3423,3259);
+L(3475,3255);
+L(3527,3252);
+L(3579,3248);
+L(3631,3244);
+L(3683,3240);
+L(3735,3236);
+L(3786,3231);
+L(3838,3228);
+L(3890,3225);
+L(3942,3222);
+L(3994,3218);
+L(4046,3213);
+L(4098,3209);
+L(4150,3204);
+L(4202,3200);
+L(4254,3196);
+L(4306,3191);
+L(4357,3187);
+L(4409,3182);
+L(4461,3177);
+L(4513,3172);
+L(4565,3167);
+L(4617,3162);
+L(4669,3157);
+L(4721,3151);
+L(4773,3144);
+L(4825,3139);
+L(4877,3133);
+L(4928,3127);
+L(4980,3119);
+L(5032,3113);
+L(5084,3105);
+L(5136,3097);
+L(5188,3088);
+L(5240,3079);
+L(5292,3067);
+L(5344,3057);
+L(5396,3044);
+L(5448,3032);
+L(5499,3016);
+L(5551,2993);
+L(5603,2969);
+L(5655,2929);
+L(5707,2863);
+L(5759,1889);
 ctx.stroke();
 ctx.closePath();
 } // End gp_plot_1 
@@ -480,106 +480,106 @@ ctx.strokeStyle = "rgb(000,171,000)";
 ctx.beginPath();
 M(5179,1788);
 L(5599,1788);
-M(620,3419);
-L(672,3290);
-L(724,3266);
-L(776,3245);
-L(828,3222);
-L(880,3201);
-L(932,3201);
-L(983,3179);
-L(1035,3179);
-L(1087,3157);
-L(1139,3157);
-L(1191,3135);
-L(1243,3135);
-L(1295,3115);
-L(1347,3113);
-L(1399,3113);
-L(1451,3092);
-L(1503,3092);
-L(1554,3089);
-L(1606,3070);
-L(1658,3070);
-L(1710,3070);
-L(1762,3048);
-L(1814,3048);
-L(1866,3048);
-L(1918,3027);
-L(1970,3026);
-L(2022,3026);
-L(2074,3019);
-L(2125,3005);
-L(2177,3005);
-L(2229,3005);
-L(2281,2996);
-L(2333,2983);
-L(2385,2983);
-L(2437,2983);
-L(2489,2966);
-L(2541,2961);
-L(2593,2961);
-L(2645,2961);
-L(2696,2939);
-L(2748,2939);
-L(2800,2939);
-L(2852,2939);
-L(2904,2918);
-L(2956,2917);
-L(3008,2917);
-L(3060,2917);
-L(3112,2896);
-L(3164,2896);
-L(3216,2896);
-L(3267,2896);
-L(3319,2875);
-L(3371,2874);
-L(3423,2874);
-L(3475,2866);
-L(3527,2852);
-L(3579,2852);
-L(3631,2852);
-L(3683,2830);
-L(3735,2830);
-L(3786,2830);
-L(3838,2828);
-L(3890,2808);
-L(3942,2808);
-L(3994,2808);
-L(4046,2795);
-L(4098,2787);
-L(4150,2787);
-L(4202,2772);
-L(4254,2765);
-L(4306,2765);
-L(4357,2746);
-L(4409,2743);
-L(4461,2743);
-L(4513,2726);
-L(4565,2721);
-L(4617,2721);
-L(4669,2700);
-L(4721,2699);
-L(4773,2694);
-L(4825,2678);
-L(4877,2675);
-L(4928,2656);
-L(4980,2655);
-L(5032,2634);
-L(5084,2631);
-L(5136,2612);
-L(5188,2591);
-L(5240,2588);
-L(5292,2569);
-L(5344,2547);
-L(5396,2525);
-L(5448,2503);
-L(5499,2481);
-L(5551,2442);
-L(5603,2409);
-L(5655,2351);
-L(5707,2267);
-L(5759,1610);
+M(620,3588);
+L(672,3479);
+L(724,3471);
+L(776,3461);
+L(828,3380);
+L(880,3364);
+L(932,3356);
+L(983,3349);
+L(1035,3345);
+L(1087,3340);
+L(1139,3330);
+L(1191,3279);
+L(1243,3258);
+L(1295,3244);
+L(1347,3236);
+L(1399,3231);
+L(1451,3227);
+L(1503,3222);
+L(1554,3217);
+L(1606,3209);
+L(1658,3202);
+L(1710,3188);
+L(1762,3165);
+L(1814,3149);
+L(1866,3136);
+L(1918,3122);
+L(1970,3115);
+L(2022,3109);
+L(2074,3105);
+L(2125,3101);
+L(2177,3096);
+L(2229,3091);
+L(2281,3085);
+L(2333,3078);
+L(2385,3070);
+L(2437,3063);
+L(2489,3050);
+L(2541,3040);
+L(2593,3029);
+L(2645,3016);
+L(2696,3005);
+L(2748,2998);
+L(2800,2992);
+L(2852,2987);
+L(2904,2983);
+L(2956,2979);
+L(3008,2975);
+L(3060,2970);
+L(3112,2965);
+L(3164,2959);
+L(3216,2953);
+L(3267,2946);
+L(3319,2939);
+L(3371,2934);
+L(3423,2928);
+L(3475,2916);
+L(3527,2900);
+L(3579,2886);
+L(3631,2878);
+L(3683,2870);
+L(3735,2864);
+L(3786,2858);
+L(3838,2852);
+L(3890,2846);
+L(3942,2839);
+L(3994,2832);
+L(4046,2826);
+L(4098,2818);
+L(4150,2809);
+L(4202,2801);
+L(4254,2789);
+L(4306,2772);
+L(4357,2760);
+L(4409,2749);
+L(4461,2740);
+L(4513,2732);
+L(4565,2723);
+L(4617,2714);
+L(4669,2705);
+L(4721,2694);
+L(4773,2679);
+L(4825,2666);
+L(4877,2651);
+L(4928,2637);
+L(4980,2623);
+L(5032,2611);
+L(5084,2600);
+L(5136,2586);
+L(5188,2570);
+L(5240,2546);
+L(5292,2526);
+L(5344,2503);
+L(5396,2480);
+L(5448,2455);
+L(5499,2422);
+L(5551,2381);
+L(5603,2306);
+L(5655,2203);
+L(5707,2052);
+L(5759,1518);
 ctx.stroke();
 ctx.closePath();
 } // End gp_plot_2 
@@ -605,8 +605,8 @@ gnuplot.plot_width = 513.9;
 gnuplot.plot_height = 217.9;
 gnuplot.plot_axis_xmin = 0;
 gnuplot.plot_axis_xmax = 50000;
-gnuplot.plot_axis_ymin = 10;
-gnuplot.plot_axis_ymax = 110;
+gnuplot.plot_axis_ymin = 0;
+gnuplot.plot_axis_ymax = 500;
 gnuplot.plot_axis_x2min = "none"
 gnuplot.plot_axis_y2min = "none"
 gnuplot.plot_logaxis_x = 0;
