Fix the benchmark runner

--- a/benchmark/ghanoz-json-benchmark-empty.html
+++ b/benchmark/ghanoz-json-benchmark-empty.html
@@ -44,7 +44,7 @@ var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
 ctx.strokeStyle = "rgb(160,160,160)";
 ctx.beginPath();
-M(700,3680);
+M(620,3680);
 L(5759,3680);
 ctx.stroke();
 ctx.closePath();
@@ -52,141 +52,201 @@ ctx.strokeStyle = "rgb(000,000,000)";
 ctx.lineWidth = saveWidth;
 } // grid_lines
 ctx.beginPath();
-M(700,3680);
-L(800,3680);
+M(620,3680);
+L(720,3680);
 M(5759,3680);
 L(5659,3680);
 ctx.stroke();
 ctx.closePath();
-T(620,3730,10.0,"Right"," 0");
+T(540,3730,10.0,"Right"," 0");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
 ctx.strokeStyle = "rgb(160,160,160)";
 ctx.beginPath();
-M(700,3369);
-L(5759,3369);
+M(620,3462);
+L(5759,3462);
 ctx.stroke();
 ctx.closePath();
 ctx.strokeStyle = "rgb(000,000,000)";
 ctx.lineWidth = saveWidth;
 } // grid_lines
 ctx.beginPath();
-M(700,3369);
-L(800,3369);
-M(5759,3369);
-L(5659,3369);
+M(620,3462);
+L(720,3462);
+M(5759,3462);
+L(5659,3462);
 ctx.stroke();
 ctx.closePath();
-T(620,3419,10.0,"Right"," 200");
+T(540,3512,10.0,"Right"," 50");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
 ctx.strokeStyle = "rgb(160,160,160)";
 ctx.beginPath();
-M(700,3057);
-L(5759,3057);
+M(620,3244);
+L(5759,3244);
 ctx.stroke();
 ctx.closePath();
 ctx.strokeStyle = "rgb(000,000,000)";
 ctx.lineWidth = saveWidth;
 } // grid_lines
 ctx.beginPath();
-M(700,3057);
-L(800,3057);
-M(5759,3057);
-L(5659,3057);
+M(620,3244);
+L(720,3244);
+M(5759,3244);
+L(5659,3244);
 ctx.stroke();
 ctx.closePath();
-T(620,3107,10.0,"Right"," 400");
+T(540,3294,10.0,"Right"," 100");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
 ctx.strokeStyle = "rgb(160,160,160)";
 ctx.beginPath();
-M(700,2746);
-L(5759,2746);
+M(620,3026);
+L(5759,3026);
 ctx.stroke();
 ctx.closePath();
 ctx.strokeStyle = "rgb(000,000,000)";
 ctx.lineWidth = saveWidth;
 } // grid_lines
 ctx.beginPath();
-M(700,2746);
-L(800,2746);
-M(5759,2746);
-L(5659,2746);
+M(620,3026);
+L(720,3026);
+M(5759,3026);
+L(5659,3026);
 ctx.stroke();
 ctx.closePath();
-T(620,2796,10.0,"Right"," 600");
+T(540,3076,10.0,"Right"," 150");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
 ctx.strokeStyle = "rgb(160,160,160)";
 ctx.beginPath();
-M(700,2435);
-L(5759,2435);
+M(620,2808);
+L(5759,2808);
 ctx.stroke();
 ctx.closePath();
 ctx.strokeStyle = "rgb(000,000,000)";
 ctx.lineWidth = saveWidth;
 } // grid_lines
 ctx.beginPath();
-M(700,2435);
-L(800,2435);
-M(5759,2435);
-L(5659,2435);
+M(620,2808);
+L(720,2808);
+M(5759,2808);
+L(5659,2808);
 ctx.stroke();
 ctx.closePath();
-T(620,2485,10.0,"Right"," 800");
+T(540,2858,10.0,"Right"," 200");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
 ctx.strokeStyle = "rgb(160,160,160)";
 ctx.beginPath();
-M(700,2124);
-L(5759,2124);
+M(620,2591);
+L(5759,2591);
 ctx.stroke();
 ctx.closePath();
 ctx.strokeStyle = "rgb(000,000,000)";
 ctx.lineWidth = saveWidth;
 } // grid_lines
 ctx.beginPath();
-M(700,2124);
-L(800,2124);
-M(5759,2124);
-L(5659,2124);
+M(620,2591);
+L(720,2591);
+M(5759,2591);
+L(5659,2591);
 ctx.stroke();
 ctx.closePath();
-T(620,2174,10.0,"Right"," 1000");
+T(540,2641,10.0,"Right"," 250");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
 ctx.strokeStyle = "rgb(160,160,160)";
 ctx.beginPath();
-M(700,1812);
-L(4779,1812);
-M(5679,1812);
-L(5759,1812);
+M(620,2373);
+L(5759,2373);
 ctx.stroke();
 ctx.closePath();
 ctx.strokeStyle = "rgb(000,000,000)";
 ctx.lineWidth = saveWidth;
 } // grid_lines
 ctx.beginPath();
-M(700,1812);
-L(800,1812);
-M(5759,1812);
-L(5659,1812);
+M(620,2373);
+L(720,2373);
+M(5759,2373);
+L(5659,2373);
 ctx.stroke();
 ctx.closePath();
-T(620,1862,10.0,"Right"," 1200");
+T(540,2423,10.0,"Right"," 300");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
 ctx.strokeStyle = "rgb(160,160,160)";
 ctx.beginPath();
-M(700,1501);
+M(620,2155);
+L(5759,2155);
+ctx.stroke();
+ctx.closePath();
+ctx.strokeStyle = "rgb(000,000,000)";
+ctx.lineWidth = saveWidth;
+} // grid_lines
+ctx.beginPath();
+M(620,2155);
+L(720,2155);
+M(5759,2155);
+L(5659,2155);
+ctx.stroke();
+ctx.closePath();
+T(540,2205,10.0,"Right"," 350");
+if (gnuplot.grid_lines) {
+var saveWidth = ctx.lineWidth;
+ctx.lineWidth = ctx.lineWidth * 0.5;
+ctx.strokeStyle = "rgb(160,160,160)";
+ctx.beginPath();
+M(620,1937);
+L(5759,1937);
+ctx.stroke();
+ctx.closePath();
+ctx.strokeStyle = "rgb(000,000,000)";
+ctx.lineWidth = saveWidth;
+} // grid_lines
+ctx.beginPath();
+M(620,1937);
+L(720,1937);
+M(5759,1937);
+L(5659,1937);
+ctx.stroke();
+ctx.closePath();
+T(540,1987,10.0,"Right"," 400");
+if (gnuplot.grid_lines) {
+var saveWidth = ctx.lineWidth;
+ctx.lineWidth = ctx.lineWidth * 0.5;
+ctx.strokeStyle = "rgb(160,160,160)";
+ctx.beginPath();
+M(620,1719);
+L(4779,1719);
+M(5679,1719);
+L(5759,1719);
+ctx.stroke();
+ctx.closePath();
+ctx.strokeStyle = "rgb(000,000,000)";
+ctx.lineWidth = saveWidth;
+} // grid_lines
+ctx.beginPath();
+M(620,1719);
+L(720,1719);
+M(5759,1719);
+L(5659,1719);
+ctx.stroke();
+ctx.closePath();
+T(540,1769,10.0,"Right"," 450");
+if (gnuplot.grid_lines) {
+var saveWidth = ctx.lineWidth;
+ctx.lineWidth = ctx.lineWidth * 0.5;
+ctx.strokeStyle = "rgb(160,160,160)";
+ctx.beginPath();
+M(620,1501);
 L(5759,1501);
 ctx.stroke();
 ctx.closePath();
@@ -194,93 +254,93 @@ ctx.strokeStyle = "rgb(000,000,000)";
 ctx.lineWidth = saveWidth;
 } // grid_lines
 ctx.beginPath();
-M(700,1501);
-L(800,1501);
+M(620,1501);
+L(720,1501);
 M(5759,1501);
 L(5659,1501);
 ctx.stroke();
 ctx.closePath();
-T(620,1551,10.0,"Right"," 1400");
+T(540,1551,10.0,"Right"," 500");
 ctx.beginPath();
-M(700,3680);
-L(700,3580);
-M(700,1501);
-L(700,1601);
+M(620,3680);
+L(620,3580);
+M(620,1501);
+L(620,1601);
 ctx.stroke();
 ctx.closePath();
-T(700,3830,10.0,"Center"," 0");
+T(620,3830,10.0,"Center"," 0");
 ctx.beginPath();
-M(1206,3680);
-L(1206,3580);
-M(1206,1501);
-L(1206,1601);
+M(1134,3680);
+L(1134,3580);
+M(1134,1501);
+L(1134,1601);
 ctx.stroke();
 ctx.closePath();
-T(1206,3830,10.0,"Center"," 5000");
+T(1134,3830,10.0,"Center"," 5000");
 ctx.beginPath();
-M(1712,3680);
-L(1712,3580);
-M(1712,1501);
-L(1712,1601);
+M(1648,3680);
+L(1648,3580);
+M(1648,1501);
+L(1648,1601);
 ctx.stroke();
 ctx.closePath();
-T(1712,3830,10.0,"Center"," 10000");
+T(1648,3830,10.0,"Center"," 10000");
 ctx.beginPath();
-M(2218,3680);
-L(2218,3580);
-M(2218,1501);
-L(2218,1601);
+M(2162,3680);
+L(2162,3580);
+M(2162,1501);
+L(2162,1601);
 ctx.stroke();
 ctx.closePath();
-T(2218,3830,10.0,"Center"," 15000");
+T(2162,3830,10.0,"Center"," 15000");
 ctx.beginPath();
-M(2724,3680);
-L(2724,3580);
-M(2724,1501);
-L(2724,1601);
+M(2676,3680);
+L(2676,3580);
+M(2676,1501);
+L(2676,1601);
 ctx.stroke();
 ctx.closePath();
-T(2724,3830,10.0,"Center"," 20000");
+T(2676,3830,10.0,"Center"," 20000");
 ctx.beginPath();
-M(3230,3680);
-L(3230,3580);
-M(3230,1501);
-L(3230,1601);
+M(3189,3680);
+L(3189,3580);
+M(3189,1501);
+L(3189,1601);
 ctx.stroke();
 ctx.closePath();
-T(3230,3830,10.0,"Center"," 25000");
+T(3189,3830,10.0,"Center"," 25000");
 ctx.beginPath();
-M(3735,3680);
-L(3735,3580);
-M(3735,1501);
-L(3735,1601);
+M(3703,3680);
+L(3703,3580);
+M(3703,1501);
+L(3703,1601);
 ctx.stroke();
 ctx.closePath();
-T(3735,3830,10.0,"Center"," 30000");
+T(3703,3830,10.0,"Center"," 30000");
 ctx.beginPath();
-M(4241,3680);
-L(4241,3580);
-M(4241,1501);
-L(4241,1601);
+M(4217,3680);
+L(4217,3580);
+M(4217,1501);
+L(4217,1601);
 ctx.stroke();
 ctx.closePath();
-T(4241,3830,10.0,"Center"," 35000");
+T(4217,3830,10.0,"Center"," 35000");
 ctx.beginPath();
-M(4747,3680);
-L(4747,3580);
-M(4747,1501);
-L(4747,1601);
+M(4731,3680);
+L(4731,3580);
+M(4731,1501);
+L(4731,1601);
 ctx.stroke();
 ctx.closePath();
-T(4747,3830,10.0,"Center"," 40000");
+T(4731,3830,10.0,"Center"," 40000");
 ctx.beginPath();
-M(5253,3680);
-L(5253,3580);
-M(5253,1501);
-L(5253,1601);
+M(5245,3680);
+L(5245,3580);
+M(5245,1501);
+L(5245,1601);
 ctx.stroke();
 ctx.closePath();
-T(5253,3830,10.0,"Center"," 45000");
+T(5245,3830,10.0,"Center"," 45000");
 ctx.beginPath();
 M(5759,3680);
 L(5759,3580);
@@ -290,16 +350,16 @@ ctx.stroke();
 ctx.closePath();
 T(5759,3830,10.0,"Center"," 50000");
 ctx.beginPath();
-M(700,1501);
-L(700,3680);
+M(620,1501);
+L(620,3680);
 L(5759,3680);
 L(5759,1501);
-L(700,1501);
+L(620,1501);
 ctx.closePath();
 ctx.stroke();
 TR(90,2641,270,10.0,"Center","response time (ms)");
-T(3229,3980,10.0,"Center","request");
-T(3229,1401,10.0,"Center","ghanoz-json xml/json benchmark testing for Empty Schema scenario");
+T(3189,3980,10.0,"Center","request");
+T(3189,1401,10.0,"Center","ghanoz-json xml/json benchmark testing for Empty Events Resource scenario");
 if (typeof(gnuplot.hide_gp_plot_1) == "undefined"|| !gnuplot.hide_gp_plot_1) {
 ctx.strokeStyle = "rgb(255,000,000)";
 ctx.strokeStyle = "rgb(000,000,000)";
@@ -308,106 +368,106 @@ ctx.strokeStyle = "rgb(255,000,000)";
 ctx.beginPath();
 M(5179,1663);
 L(5599,1663);
-M(700,3633);
-L(751,3626);
-L(802,3619);
-L(853,3613);
-L(905,3610);
-L(956,3607);
-L(1007,3604);
-L(1058,3602);
-L(1109,3599);
-L(1160,3596);
-L(1211,3593);
-L(1262,3591);
-L(1313,3588);
-L(1364,3587);
-L(1416,3585);
-L(1467,3583);
-L(1518,3582);
-L(1569,3580);
-L(1620,3578);
-L(1671,3576);
-L(1722,3574);
-L(1773,3573);
-L(1824,3571);
-L(1875,3569);
-L(1927,3568);
-L(1978,3566);
-L(2029,3565);
-L(2080,3563);
-L(2131,3562);
-L(2182,3561);
-L(2233,3560);
-L(2284,3559);
-L(2335,3557);
-L(2386,3556);
-L(2438,3554);
-L(2489,3553);
-L(2540,3552);
-L(2591,3551);
-L(2642,3549);
-L(2693,3548);
-L(2744,3546);
-L(2795,3545);
-L(2846,3544);
-L(2897,3543);
-L(2949,3541);
-L(3000,3540);
-L(3051,3540);
-L(3102,3538);
-L(3153,3538);
-L(3204,3536);
-L(3255,3535);
-L(3306,3533);
-L(3357,3532);
-L(3408,3530);
-L(3460,3529);
-L(3511,3527);
-L(3562,3526);
-L(3613,3525);
-L(3664,3523);
-L(3715,3522);
-L(3766,3521);
-L(3817,3520);
-L(3868,3518);
-L(3919,3517);
-L(3971,3516);
-L(4022,3514);
-L(4073,3512);
-L(4124,3511);
-L(4175,3509);
-L(4226,3507);
-L(4277,3506);
-L(4328,3504);
-L(4379,3503);
-L(4430,3501);
-L(4482,3499);
-L(4533,3498);
-L(4584,3496);
-L(4635,3494);
-L(4686,3492);
-L(4737,3490);
-L(4788,3488);
-L(4839,3486);
-L(4890,3483);
-L(4941,3481);
-L(4993,3479);
-L(5044,3476);
-L(5095,3474);
-L(5146,3471);
-L(5197,3468);
-L(5248,3464);
-L(5299,3460);
-L(5350,3456);
-L(5401,3452);
-L(5452,3447);
-L(5504,3440);
-L(5555,3432);
-L(5606,3422);
-L(5657,3409);
-L(5708,3387);
-L(5759,1605);
+M(620,3549);
+L(672,3527);
+L(724,3512);
+L(776,3493);
+L(828,3484);
+L(880,3477);
+L(932,3471);
+L(983,3462);
+L(1035,3453);
+L(1087,3444);
+L(1139,3436);
+L(1191,3431);
+L(1243,3427);
+L(1295,3421);
+L(1347,3417);
+L(1399,3412);
+L(1451,3406);
+L(1503,3401);
+L(1554,3396);
+L(1606,3391);
+L(1658,3385);
+L(1710,3379);
+L(1762,3375);
+L(1814,3371);
+L(1866,3367);
+L(1918,3363);
+L(1970,3361);
+L(2022,3357);
+L(2074,3353);
+L(2125,3349);
+L(2177,3344);
+L(2229,3340);
+L(2281,3337);
+L(2333,3334);
+L(2385,3330);
+L(2437,3327);
+L(2489,3323);
+L(2541,3319);
+L(2593,3314);
+L(2645,3312);
+L(2696,3309);
+L(2748,3305);
+L(2800,3302);
+L(2852,3300);
+L(2904,3296);
+L(2956,3292);
+L(3008,3288);
+L(3060,3284);
+L(3112,3282);
+L(3164,3279);
+L(3216,3275);
+L(3267,3270);
+L(3319,3267);
+L(3371,3264);
+L(3423,3261);
+L(3475,3257);
+L(3527,3253);
+L(3579,3250);
+L(3631,3247);
+L(3683,3244);
+L(3735,3239);
+L(3786,3235);
+L(3838,3231);
+L(3890,3227);
+L(3942,3222);
+L(3994,3218);
+L(4046,3214);
+L(4098,3210);
+L(4150,3205);
+L(4202,3201);
+L(4254,3197);
+L(4306,3192);
+L(4357,3188);
+L(4409,3184);
+L(4461,3179);
+L(4513,3175);
+L(4565,3170);
+L(4617,3166);
+L(4669,3159);
+L(4721,3153);
+L(4773,3148);
+L(4825,3142);
+L(4877,3136);
+L(4928,3130);
+L(4980,3123);
+L(5032,3116);
+L(5084,3109);
+L(5136,3100);
+L(5188,3092);
+L(5240,3083);
+L(5292,3073);
+L(5344,3061);
+L(5396,3050);
+L(5448,3034);
+L(5499,3018);
+L(5551,2996);
+L(5603,2968);
+L(5655,2931);
+L(5707,2869);
+L(5759,2185);
 ctx.stroke();
 ctx.closePath();
 } // End gp_plot_1 
@@ -420,133 +480,133 @@ ctx.strokeStyle = "rgb(000,171,000)";
 ctx.beginPath();
 M(5179,1788);
 L(5599,1788);
-M(700,3616);
-L(751,3609);
-L(802,3605);
-L(853,3599);
-L(905,3575);
-L(956,3571);
-L(1007,3568);
-L(1058,3564);
-L(1109,3560);
-L(1160,3556);
-L(1211,3550);
-L(1262,3536);
-L(1313,3532);
-L(1364,3529);
-L(1416,3526);
-L(1467,3523);
-L(1518,3519);
-L(1569,3516);
-L(1620,3512);
-L(1671,3509);
-L(1722,3504);
-L(1773,3499);
-L(1824,3494);
-L(1875,3492);
-L(1927,3489);
-L(1978,3487);
-L(2029,3485);
-L(2080,3482);
-L(2131,3477);
-L(2182,3473);
-L(2233,3470);
-L(2284,3467);
-L(2335,3464);
-L(2386,3461);
-L(2438,3458);
-L(2489,3456);
-L(2540,3453);
-L(2591,3451);
-L(2642,3448);
-L(2693,3447);
-L(2744,3445);
-L(2795,3443);
-L(2846,3440);
-L(2897,3437);
-L(2949,3433);
-L(3000,3430);
-L(3051,3427);
-L(3102,3424);
-L(3153,3421);
-L(3204,3419);
-L(3255,3416);
-L(3306,3414);
-L(3357,3412);
-L(3408,3409);
-L(3460,3407);
-L(3511,3405);
-L(3562,3403);
-L(3613,3401);
-L(3664,3397);
-L(3715,3393);
-L(3766,3390);
-L(3817,3386);
-L(3868,3383);
-L(3919,3379);
-L(3971,3376);
-L(4022,3373);
-L(4073,3371);
-L(4124,3368);
-L(4175,3366);
-L(4226,3363);
-L(4277,3361);
-L(4328,3357);
-L(4379,3352);
-L(4430,3348);
-L(4482,3343);
-L(4533,3339);
-L(4584,3335);
-L(4635,3331);
-L(4686,3328);
-L(4737,3325);
-L(4788,3321);
-L(4839,3317);
-L(4890,3313);
-L(4941,3307);
-L(4993,3301);
-L(5044,3295);
-L(5095,3289);
-L(5146,3284);
-L(5197,3279);
-L(5248,3272);
-L(5299,3266);
-L(5350,3256);
-L(5401,3245);
-L(5452,3235);
-L(5504,3223);
-L(5555,3207);
-L(5606,3184);
-L(5657,3155);
-L(5708,3103);
-L(5759,2838);
+M(620,3501);
+L(672,3482);
+L(724,3473);
+L(776,3460);
+L(828,3380);
+L(880,3370);
+L(932,3362);
+L(983,3355);
+L(1035,3349);
+L(1087,3341);
+L(1139,3323);
+L(1191,3270);
+L(1243,3257);
+L(1295,3249);
+L(1347,3244);
+L(1399,3237);
+L(1451,3231);
+L(1503,3224);
+L(1554,3218);
+L(1606,3210);
+L(1658,3201);
+L(1710,3183);
+L(1762,3156);
+L(1814,3143);
+L(1866,3135);
+L(1918,3131);
+L(1970,3124);
+L(2022,3118);
+L(2074,3112);
+L(2125,3104);
+L(2177,3096);
+L(2229,3089);
+L(2281,3084);
+L(2333,3077);
+L(2385,3067);
+L(2437,3055);
+L(2489,3042);
+L(2541,3032);
+L(2593,3024);
+L(2645,3018);
+L(2696,3013);
+L(2748,3008);
+L(2800,3004);
+L(2852,2997);
+L(2904,2990);
+L(2956,2982);
+L(3008,2975);
+L(3060,2968);
+L(3112,2962);
+L(3164,2957);
+L(3216,2952);
+L(3267,2944);
+L(3319,2936);
+L(3371,2927);
+L(3423,2917);
+L(3475,2906);
+L(3527,2899);
+L(3579,2894);
+L(3631,2888);
+L(3683,2880);
+L(3735,2872);
+L(3786,2862);
+L(3838,2853);
+L(3890,2844);
+L(3942,2836);
+L(3994,2829);
+L(4046,2823);
+L(4098,2816);
+L(4150,2806);
+L(4202,2794);
+L(4254,2784);
+L(4306,2778);
+L(4357,2770);
+L(4409,2760);
+L(4461,2746);
+L(4513,2732);
+L(4565,2719);
+L(4617,2708);
+L(4669,2699);
+L(4721,2691);
+L(4773,2679);
+L(4825,2668);
+L(4877,2659);
+L(4928,2650);
+L(4980,2635);
+L(5032,2617);
+L(5084,2600);
+L(5136,2581);
+L(5188,2566);
+L(5240,2551);
+L(5292,2534);
+L(5344,2514);
+L(5396,2492);
+L(5448,2461);
+L(5499,2434);
+L(5551,2393);
+L(5603,2328);
+L(5655,2245);
+L(5707,2104);
+L(5759,1584);
 ctx.stroke();
 ctx.closePath();
 } // End gp_plot_2 
 ctx.lineWidth = 1;
 ctx.strokeStyle = "rgb(000,000,000)";
 ctx.beginPath();
-M(700,1501);
-L(700,3680);
+M(620,1501);
+L(620,3680);
 L(5759,3680);
 L(5759,1501);
-L(700,1501);
+L(620,1501);
 ctx.closePath();
 ctx.stroke();
 
 // plot boundaries and axis scaling information for mousing 
 gnuplot.plot_term_xmax = 600;
 gnuplot.plot_term_ymax = 400;
-gnuplot.plot_xmin = 70.0;
+gnuplot.plot_xmin = 62.0;
 gnuplot.plot_xmax = 575.9;
 gnuplot.plot_ybot = 368.0;
 gnuplot.plot_ytop = 150.1;
-gnuplot.plot_width = 505.9;
+gnuplot.plot_width = 513.9;
 gnuplot.plot_height = 217.9;
 gnuplot.plot_axis_xmin = 0;
 gnuplot.plot_axis_xmax = 50000;
 gnuplot.plot_axis_ymin = 0;
-gnuplot.plot_axis_ymax = 1400;
+gnuplot.plot_axis_ymax = 500;
 gnuplot.plot_axis_x2min = "none"
 gnuplot.plot_axis_y2min = "none"
 gnuplot.plot_logaxis_x = 0;
