--- a/benchmark/ghanoz-json-benchmark-normal.html
+++ b/benchmark/ghanoz-json-benchmark-normal.html
@@ -64,183 +64,163 @@ var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
 ctx.strokeStyle = "rgb(160,160,160)";
 ctx.beginPath();
-M(620,3462);
-L(5759,3462);
+M(620,3438);
+L(5759,3438);
 ctx.stroke();
 ctx.closePath();
 ctx.strokeStyle = "rgb(000,000,000)";
 ctx.lineWidth = saveWidth;
 } // grid_lines
 ctx.beginPath();
-M(620,3462);
-L(720,3462);
-M(5759,3462);
-L(5659,3462);
+M(620,3438);
+L(720,3438);
+M(5759,3438);
+L(5659,3438);
 ctx.stroke();
 ctx.closePath();
-T(540,3512,10.0,"Right"," 50");
+T(540,3488,10.0,"Right"," 20");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
 ctx.strokeStyle = "rgb(160,160,160)";
 ctx.beginPath();
-M(620,3244);
-L(5759,3244);
+M(620,3196);
+L(5759,3196);
 ctx.stroke();
 ctx.closePath();
 ctx.strokeStyle = "rgb(000,000,000)";
 ctx.lineWidth = saveWidth;
 } // grid_lines
 ctx.beginPath();
-M(620,3244);
-L(720,3244);
-M(5759,3244);
-L(5659,3244);
+M(620,3196);
+L(720,3196);
+M(5759,3196);
+L(5659,3196);
 ctx.stroke();
 ctx.closePath();
-T(540,3294,10.0,"Right"," 100");
+T(540,3246,10.0,"Right"," 40");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
 ctx.strokeStyle = "rgb(160,160,160)";
 ctx.beginPath();
-M(620,3026);
-L(5759,3026);
+M(620,2954);
+L(5759,2954);
 ctx.stroke();
 ctx.closePath();
 ctx.strokeStyle = "rgb(000,000,000)";
 ctx.lineWidth = saveWidth;
 } // grid_lines
 ctx.beginPath();
-M(620,3026);
-L(720,3026);
-M(5759,3026);
-L(5659,3026);
+M(620,2954);
+L(720,2954);
+M(5759,2954);
+L(5659,2954);
 ctx.stroke();
 ctx.closePath();
-T(540,3076,10.0,"Right"," 150");
+T(540,3004,10.0,"Right"," 60");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
 ctx.strokeStyle = "rgb(160,160,160)";
 ctx.beginPath();
-M(620,2808);
-L(5759,2808);
+M(620,2712);
+L(5759,2712);
 ctx.stroke();
 ctx.closePath();
 ctx.strokeStyle = "rgb(000,000,000)";
 ctx.lineWidth = saveWidth;
 } // grid_lines
 ctx.beginPath();
-M(620,2808);
-L(720,2808);
-M(5759,2808);
-L(5659,2808);
+M(620,2712);
+L(720,2712);
+M(5759,2712);
+L(5659,2712);
 ctx.stroke();
 ctx.closePath();
-T(540,2858,10.0,"Right"," 200");
+T(540,2762,10.0,"Right"," 80");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
 ctx.strokeStyle = "rgb(160,160,160)";
 ctx.beginPath();
-M(620,2591);
-L(5759,2591);
+M(620,2469);
+L(5759,2469);
 ctx.stroke();
 ctx.closePath();
 ctx.strokeStyle = "rgb(000,000,000)";
 ctx.lineWidth = saveWidth;
 } // grid_lines
 ctx.beginPath();
-M(620,2591);
-L(720,2591);
-M(5759,2591);
-L(5659,2591);
+M(620,2469);
+L(720,2469);
+M(5759,2469);
+L(5659,2469);
 ctx.stroke();
 ctx.closePath();
-T(540,2641,10.0,"Right"," 250");
+T(540,2519,10.0,"Right"," 100");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
 ctx.strokeStyle = "rgb(160,160,160)";
 ctx.beginPath();
-M(620,2373);
-L(5759,2373);
+M(620,2227);
+L(5759,2227);
 ctx.stroke();
 ctx.closePath();
 ctx.strokeStyle = "rgb(000,000,000)";
 ctx.lineWidth = saveWidth;
 } // grid_lines
 ctx.beginPath();
-M(620,2373);
-L(720,2373);
-M(5759,2373);
-L(5659,2373);
+M(620,2227);
+L(720,2227);
+M(5759,2227);
+L(5659,2227);
 ctx.stroke();
 ctx.closePath();
-T(540,2423,10.0,"Right"," 300");
+T(540,2277,10.0,"Right"," 120");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
 ctx.strokeStyle = "rgb(160,160,160)";
 ctx.beginPath();
-M(620,2155);
-L(5759,2155);
+M(620,1985);
+L(5759,1985);
 ctx.stroke();
 ctx.closePath();
 ctx.strokeStyle = "rgb(000,000,000)";
 ctx.lineWidth = saveWidth;
 } // grid_lines
 ctx.beginPath();
-M(620,2155);
-L(720,2155);
-M(5759,2155);
-L(5659,2155);
+M(620,1985);
+L(720,1985);
+M(5759,1985);
+L(5659,1985);
 ctx.stroke();
 ctx.closePath();
-T(540,2205,10.0,"Right"," 350");
+T(540,2035,10.0,"Right"," 140");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
 ctx.strokeStyle = "rgb(160,160,160)";
 ctx.beginPath();
-M(620,1937);
-L(5759,1937);
+M(620,1743);
+L(4779,1743);
+M(5679,1743);
+L(5759,1743);
 ctx.stroke();
 ctx.closePath();
 ctx.strokeStyle = "rgb(000,000,000)";
 ctx.lineWidth = saveWidth;
 } // grid_lines
 ctx.beginPath();
-M(620,1937);
-L(720,1937);
-M(5759,1937);
-L(5659,1937);
+M(620,1743);
+L(720,1743);
+M(5759,1743);
+L(5659,1743);
 ctx.stroke();
 ctx.closePath();
-T(540,1987,10.0,"Right"," 400");
-if (gnuplot.grid_lines) {
-var saveWidth = ctx.lineWidth;
-ctx.lineWidth = ctx.lineWidth * 0.5;
-ctx.strokeStyle = "rgb(160,160,160)";
-ctx.beginPath();
-M(620,1719);
-L(4779,1719);
-M(5679,1719);
-L(5759,1719);
-ctx.stroke();
-ctx.closePath();
-ctx.strokeStyle = "rgb(000,000,000)";
-ctx.lineWidth = saveWidth;
-} // grid_lines
-ctx.beginPath();
-M(620,1719);
-L(720,1719);
-M(5759,1719);
-L(5659,1719);
-ctx.stroke();
-ctx.closePath();
-T(540,1769,10.0,"Right"," 450");
+T(540,1793,10.0,"Right"," 160");
 if (gnuplot.grid_lines) {
 var saveWidth = ctx.lineWidth;
 ctx.lineWidth = ctx.lineWidth * 0.5;
@@ -260,7 +240,7 @@ M(5759,1501);
 L(5659,1501);
 ctx.stroke();
 ctx.closePath();
-T(540,1551,10.0,"Right"," 500");
+T(540,1551,10.0,"Right"," 180");
 ctx.beginPath();
 M(620,3680);
 L(620,3580);
@@ -270,77 +250,69 @@ ctx.stroke();
 ctx.closePath();
 T(620,3830,10.0,"Center"," 0");
 ctx.beginPath();
-M(1134,3680);
-L(1134,3580);
-M(1134,1501);
-L(1134,1601);
+M(1191,3680);
+L(1191,3580);
+M(1191,1501);
+L(1191,1601);
 ctx.stroke();
 ctx.closePath();
-T(1134,3830,10.0,"Center"," 5000");
+T(1191,3830,10.0,"Center"," 5000");
 ctx.beginPath();
-M(1648,3680);
-L(1648,3580);
-M(1648,1501);
-L(1648,1601);
+M(1762,3680);
+L(1762,3580);
+M(1762,1501);
+L(1762,1601);
 ctx.stroke();
 ctx.closePath();
-T(1648,3830,10.0,"Center"," 10000");
+T(1762,3830,10.0,"Center"," 10000");
 ctx.beginPath();
-M(2162,3680);
-L(2162,3580);
-M(2162,1501);
-L(2162,1601);
+M(2333,3680);
+L(2333,3580);
+M(2333,1501);
+L(2333,1601);
 ctx.stroke();
 ctx.closePath();
-T(2162,3830,10.0,"Center"," 15000");
+T(2333,3830,10.0,"Center"," 15000");
 ctx.beginPath();
-M(2676,3680);
-L(2676,3580);
-M(2676,1501);
-L(2676,1601);
+M(2904,3680);
+L(2904,3580);
+M(2904,1501);
+L(2904,1601);
 ctx.stroke();
 ctx.closePath();
-T(2676,3830,10.0,"Center"," 20000");
+T(2904,3830,10.0,"Center"," 20000");
 ctx.beginPath();
-M(3189,3680);
-L(3189,3580);
-M(3189,1501);
-L(3189,1601);
+M(3475,3680);
+L(3475,3580);
+M(3475,1501);
+L(3475,1601);
 ctx.stroke();
 ctx.closePath();
-T(3189,3830,10.0,"Center"," 25000");
+T(3475,3830,10.0,"Center"," 25000");
 ctx.beginPath();
-M(3703,3680);
-L(3703,3580);
-M(3703,1501);
-L(3703,1601);
+M(4046,3680);
+L(4046,3580);
+M(4046,1501);
+L(4046,1601);
 ctx.stroke();
 ctx.closePath();
-T(3703,3830,10.0,"Center"," 30000");
+T(4046,3830,10.0,"Center"," 30000");
 ctx.beginPath();
-M(4217,3680);
-L(4217,3580);
-M(4217,1501);
-L(4217,1601);
+M(4617,3680);
+L(4617,3580);
+M(4617,1501);
+L(4617,1601);
 ctx.stroke();
 ctx.closePath();
-T(4217,3830,10.0,"Center"," 35000");
+T(4617,3830,10.0,"Center"," 35000");
 ctx.beginPath();
-M(4731,3680);
-L(4731,3580);
-M(4731,1501);
-L(4731,1601);
+M(5188,3680);
+L(5188,3580);
+M(5188,1501);
+L(5188,1601);
 ctx.stroke();
 ctx.closePath();
-T(4731,3830,10.0,"Center"," 40000");
-ctx.beginPath();
-M(5245,3680);
-L(5245,3580);
-M(5245,1501);
-L(5245,1601);
-ctx.stroke();
-ctx.closePath();
-T(5245,3830,10.0,"Center"," 45000");
+T(5188,3830,10.0,"Center"," 40000");
 ctx.beginPath();
 M(5759,3680);
 L(5759,3580);
@@ -348,7 +320,7 @@ M(5759,1501);
 L(5759,1601);
 ctx.stroke();
 ctx.closePath();
-T(5759,3830,10.0,"Center"," 50000");
+T(5759,3830,10.0,"Center"," 45000");
 ctx.beginPath();
 M(620,1501);
 L(620,3680);
@@ -359,7 +331,7 @@ ctx.closePath();
 ctx.stroke();
 TR(90,2641,270,10.0,"Center","response time (ms)");
 T(3189,3980,10.0,"Center","request");
-T(3189,1401,10.0,"Center","ghanoz-json xml/json benchmark testing for Normal Resource scenario");
+T(3189,1401,10.0,"Center","ghanoz-json xml/json benchmark testing for Normal Events Resource scenario");
 if (typeof(gnuplot.hide_gp_plot_1) == "undefined"|| !gnuplot.hide_gp_plot_1) {
 ctx.strokeStyle = "rgb(255,000,000)";
 ctx.strokeStyle = "rgb(000,000,000)";
@@ -368,106 +340,106 @@ ctx.strokeStyle = "rgb(255,000,000)";
 ctx.beginPath();
 M(5179,1663);
 L(5599,1663);
-M(620,3549);
-L(672,3527);
-L(724,3512);
-L(776,3496);
-L(828,3484);
-L(880,3477);
-L(932,3471);
-L(983,3462);
-L(1035,3453);
-L(1087,3445);
-L(1139,3436);
-L(1191,3432);
-L(1243,3427);
-L(1295,3421);
-L(1347,3416);
-L(1399,3411);
-L(1451,3406);
-L(1503,3401);
-L(1554,3396);
-L(1606,3389);
-L(1658,3384);
-L(1710,3380);
-L(1762,3375);
-L(1814,3371);
-L(1866,3367);
-L(1918,3363);
-L(1970,3360);
-L(2022,3356);
-L(2074,3353);
-L(2125,3348);
-L(2177,3344);
-L(2229,3340);
-L(2281,3336);
-L(2333,3332);
-L(2385,3329);
-L(2437,3326);
-L(2489,3323);
-L(2541,3318);
-L(2593,3315);
-L(2645,3312);
-L(2696,3309);
-L(2748,3305);
-L(2800,3301);
-L(2852,3297);
-L(2904,3292);
-L(2956,3289);
-L(3008,3287);
-L(3060,3283);
-L(3112,3279);
-L(3164,3276);
-L(3216,3274);
-L(3267,3270);
-L(3319,3266);
-L(3371,3262);
-L(3423,3259);
-L(3475,3255);
-L(3527,3252);
-L(3579,3248);
-L(3631,3244);
-L(3683,3240);
-L(3735,3236);
-L(3786,3231);
-L(3838,3228);
-L(3890,3225);
-L(3942,3222);
-L(3994,3218);
-L(4046,3213);
-L(4098,3209);
-L(4150,3204);
-L(4202,3200);
-L(4254,3196);
-L(4306,3191);
-L(4357,3187);
-L(4409,3182);
-L(4461,3177);
-L(4513,3172);
-L(4565,3167);
-L(4617,3162);
-L(4669,3157);
-L(4721,3151);
-L(4773,3144);
-L(4825,3139);
-L(4877,3133);
-L(4928,3127);
-L(4980,3119);
-L(5032,3113);
-L(5084,3105);
-L(5136,3097);
-L(5188,3088);
-L(5240,3079);
-L(5292,3067);
-L(5344,3057);
-L(5396,3044);
-L(5448,3032);
-L(5499,3016);
-L(5551,2993);
-L(5603,2969);
-L(5655,2929);
-L(5707,2863);
-L(5759,1889);
+M(620,3668);
+L(668,3668);
+L(715,3668);
+L(762,3668);
+L(810,3668);
+L(857,3668);
+L(905,3668);
+L(952,3668);
+L(1000,3668);
+L(1047,3668);
+L(1095,3668);
+L(1142,3668);
+L(1189,3668);
+L(1237,3668);
+L(1284,3668);
+L(1332,3668);
+L(1379,3668);
+L(1427,3668);
+L(1474,3668);
+L(1522,3668);
+L(1569,3668);
+L(1616,3668);
+L(1664,3668);
+L(1711,3668);
+L(1759,3668);
+L(1806,3668);
+L(1854,3668);
+L(1901,3668);
+L(1948,3668);
+L(1996,3668);
+L(2043,3668);
+L(2091,3668);
+L(2138,3668);
+L(2186,3668);
+L(2233,3668);
+L(2281,3668);
+L(2328,3668);
+L(2375,3668);
+L(2423,3668);
+L(2470,3668);
+L(2518,3668);
+L(2565,3668);
+L(2613,3663);
+L(2660,3656);
+L(2708,3656);
+L(2755,3656);
+L(2802,3656);
+L(2850,3656);
+L(2897,3656);
+L(2945,3656);
+L(2992,3656);
+L(3040,3656);
+L(3087,3656);
+L(3135,3656);
+L(3182,3656);
+L(3229,3656);
+L(3277,3656);
+L(3324,3656);
+L(3372,3656);
+L(3419,3656);
+L(3467,3656);
+L(3514,3656);
+L(3561,3656);
+L(3609,3656);
+L(3656,3656);
+L(3704,3656);
+L(3751,3656);
+L(3799,3656);
+L(3846,3656);
+L(3894,3656);
+L(3941,3656);
+L(3988,3656);
+L(4036,3656);
+L(4083,3644);
+L(4131,3644);
+L(4178,3644);
+L(4226,3644);
+L(4273,3644);
+L(4321,3644);
+L(4368,3644);
+L(4415,3644);
+L(4463,3644);
+L(4510,3644);
+L(4558,3644);
+L(4605,3644);
+L(4653,3644);
+L(4700,3644);
+L(4748,3644);
+L(4795,3644);
+L(4842,3632);
+L(4890,3632);
+L(4937,3632);
+L(4985,3632);
+L(5032,3632);
+L(5080,3632);
+L(5127,3632);
+L(5174,3630);
+L(5222,3619);
+L(5269,3615);
+L(5317,1622);
 ctx.stroke();
 ctx.closePath();
 } // End gp_plot_1 
@@ -480,106 +452,106 @@ ctx.strokeStyle = "rgb(000,171,000)";
 ctx.beginPath();
 M(5179,1788);
 L(5599,1788);
-M(620,3588);
-L(672,3479);
-L(724,3471);
-L(776,3461);
-L(828,3380);
-L(880,3364);
-L(932,3356);
-L(983,3349);
-L(1035,3345);
-L(1087,3340);
-L(1139,3330);
-L(1191,3279);
-L(1243,3258);
-L(1295,3244);
-L(1347,3236);
-L(1399,3231);
-L(1451,3227);
-L(1503,3222);
-L(1554,3217);
-L(1606,3209);
-L(1658,3202);
-L(1710,3188);
-L(1762,3165);
-L(1814,3149);
-L(1866,3136);
-L(1918,3122);
-L(1970,3115);
-L(2022,3109);
-L(2074,3105);
-L(2125,3101);
-L(2177,3096);
-L(2229,3091);
-L(2281,3085);
-L(2333,3078);
-L(2385,3070);
-L(2437,3063);
-L(2489,3050);
-L(2541,3040);
-L(2593,3029);
-L(2645,3016);
-L(2696,3005);
-L(2748,2998);
-L(2800,2992);
-L(2852,2987);
-L(2904,2983);
-L(2956,2979);
-L(3008,2975);
-L(3060,2970);
-L(3112,2965);
-L(3164,2959);
-L(3216,2953);
-L(3267,2946);
-L(3319,2939);
-L(3371,2934);
-L(3423,2928);
-L(3475,2916);
-L(3527,2900);
-L(3579,2886);
-L(3631,2878);
-L(3683,2870);
-L(3735,2864);
-L(3786,2858);
-L(3838,2852);
-L(3890,2846);
-L(3942,2839);
-L(3994,2832);
-L(4046,2826);
-L(4098,2818);
-L(4150,2809);
-L(4202,2801);
-L(4254,2789);
-L(4306,2772);
-L(4357,2760);
-L(4409,2749);
-L(4461,2740);
-L(4513,2732);
-L(4565,2723);
-L(4617,2714);
-L(4669,2705);
-L(4721,2694);
-L(4773,2679);
-L(4825,2666);
-L(4877,2651);
-L(4928,2637);
-L(4980,2623);
-L(5032,2611);
-L(5084,2600);
-L(5136,2586);
-L(5188,2570);
-L(5240,2546);
-L(5292,2526);
-L(5344,2503);
-L(5396,2480);
-L(5448,2455);
-L(5499,2422);
-L(5551,2381);
-L(5603,2306);
-L(5655,2203);
-L(5707,2052);
-L(5759,1518);
+M(620,3656);
+L(652,3656);
+L(684,3656);
+L(715,3656);
+L(747,3656);
+L(779,3656);
+L(811,3656);
+L(842,3656);
+L(874,3656);
+L(906,3656);
+L(938,3656);
+L(969,3656);
+L(1001,3656);
+L(1033,3656);
+L(1064,3656);
+L(1096,3656);
+L(1128,3656);
+L(1160,3656);
+L(1191,3656);
+L(1223,3656);
+L(1255,3656);
+L(1287,3656);
+L(1318,3656);
+L(1350,3656);
+L(1382,3656);
+L(1414,3656);
+L(1445,3656);
+L(1477,3656);
+L(1509,3656);
+L(1541,3656);
+L(1572,3656);
+L(1604,3645);
+L(1636,3644);
+L(1668,3644);
+L(1699,3644);
+L(1731,3644);
+L(1763,3644);
+L(1795,3644);
+L(1826,3644);
+L(1858,3644);
+L(1890,3644);
+L(1921,3644);
+L(1953,3644);
+L(1985,3644);
+L(2017,3644);
+L(2048,3644);
+L(2080,3644);
+L(2112,3644);
+L(2144,3644);
+L(2175,3644);
+L(2207,3644);
+L(2239,3644);
+L(2271,3644);
+L(2302,3644);
+L(2334,3644);
+L(2366,3644);
+L(2398,3644);
+L(2429,3644);
+L(2461,3644);
+L(2493,3644);
+L(2525,3644);
+L(2556,3644);
+L(2588,3644);
+L(2620,3644);
+L(2652,3644);
+L(2683,3644);
+L(2715,3644);
+L(2747,3644);
+L(2778,3644);
+L(2810,3644);
+L(2842,3644);
+L(2874,3644);
+L(2905,3644);
+L(2937,3644);
+L(2969,3644);
+L(3001,3644);
+L(3032,3644);
+L(3064,3634);
+L(3096,3632);
+L(3128,3632);
+L(3159,3632);
+L(3191,3632);
+L(3223,3632);
+L(3255,3632);
+L(3286,3632);
+L(3318,3632);
+L(3350,3632);
+L(3382,3625);
+L(3413,3619);
+L(3445,3619);
+L(3477,3616);
+L(3509,3607);
+L(3540,3607);
+L(3572,3607);
+L(3604,3598);
+L(3635,3595);
+L(3667,3595);
+L(3699,3595);
+L(3731,3583);
+L(3762,1598);
 ctx.stroke();
 ctx.closePath();
 } // End gp_plot_2 
@@ -604,9 +576,9 @@ gnuplot.plot_ytop = 150.1;
 gnuplot.plot_width = 513.9;
 gnuplot.plot_height = 217.9;
 gnuplot.plot_axis_xmin = 0;
-gnuplot.plot_axis_xmax = 50000;
+gnuplot.plot_axis_xmax = 45000;
 gnuplot.plot_axis_ymin = 0;
-gnuplot.plot_axis_ymax = 500;
+gnuplot.plot_axis_ymax = 180;
 gnuplot.plot_axis_x2min = "none"
 gnuplot.plot_axis_y2min = "none"
 gnuplot.plot_logaxis_x = 0;
